<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:paddingStart="20dp"
    android:layout_marginRight="0dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aba2naija.aba2naija.Aba2NaijaMainActivity"
    android:layout_marginTop="0dp"
    android:background="@drawable/background"
    android:layout_marginBottom="0dp"
    android:layout_marginLeft="0dp">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="83dp"
        android:src="@drawable/aba"
        android:layout_marginLeft="150dp"/>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

       <TextView
           android:id="@+id/tv_user_name"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/userName"
           android:textColor="#000"
           android:textSize="20sp" />

    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userNameexample"
        android:inputType="text"
        android:drawableEnd="@drawable/username_24dp"/>



       <TextView
           android:id="@+id/tv_email"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/email"
           android:textColor="#000"
           android:textSize="20sp"/>
       <EditText
           android:id="@+id/et_email"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/emailAdress"
           android:drawableEnd="@drawable/emailexample_24dp"
           android:inputType="textEmailAddress"/>

       <TextView
           android:id="@+id/tv_phone"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/phone"
           android:textColor="#000"
           android:textSize="20sp" />

       <EditText
           android:id="@+id/et_phone"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/phoneNumber"
           android:inputType="phone"
           android:drawableEnd="@drawable/phoncall_24dp"
           android:maxLength="11"/>

       <TextView
           android:id="@+id/tv_password"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/password"
           android:textColor="#000"
           android:textSize="20sp"/>

       <EditText
         android:id="@+id/et_password"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/passwordExample"
           android:drawableRight="@drawable/passwordlogo_24dp"
           android:drawableLeft="@drawable/passwordexample_24dp"
           android:inputType="textPassword"/>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/confirmPassword"
           android:textColor="#000"
           android:textSize="20sp"/>
       <EditText
           android:id="@+id/et_confirm_password"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/passwordExample"
           android:inputType="textPassword"
           android:drawableRight="@drawable/passwordlogo_24dp"/>

       <Button
           android:id="@+id/btn_register"
           android:layout_width="match_parent"
           android:layout_height="45dp"
           android:gravity="center"
           android:text="@string/register"
           android:textColor="@color/colorPrimary"
           android:textSize="20sp"
          />


       <LinearLayout
           android:orientation="horizontal"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginRight="10dp">


           <TextView
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:text="@string/alreadyRegistered"
               android:textColor="#000"
               android:textSize="20sp"
               android:layout_marginRight="10dp"/>


           <Button
               android:id="@+id/btn_login"
               android:layout_width="147dp"
               android:layout_height="41dp"
               android:text="@string/login"
               android:textColor="@color/colorPrimary" />







       </LinearLayout>


    </LinearLayout>
</LinearLayout>
